--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -382,6 +382,8 @@ path.two {
 .conteneur-apparition{
   border-radius: 20px;
   width: 40%;
+  max-height: 93vh;
+  overflow-y: auto;
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.06), 0 2px 5px 0 rgba(0, 0, 0, 0.2);
   z-index: 30;
   background-color: black;
