--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -29,7 +29,7 @@ li{
 
 .navbaree{
     height: auto;
-    min-height: 70px;
+    min-height: 90px;
     width: 100%;
     display: flex;
     position: fixed;
@@ -69,6 +69,7 @@ li{
     font-size: 30px;
     justify-content: center;
     width: auto;
+    align-items: center;
     margin-left: 20px;
     
     
@@ -79,7 +80,7 @@ li{
     flex-grow: 1;
     flex-direction: row;
     justify-content: center;
-    
+    align-items: center;
     
 }
 
@@ -108,26 +109,17 @@ nav>div+div>ul>li>a{
     text-decoration: none;
     color: white;
     scroll-behavior:smooth;
-    transition: text-decoration 1s ease-in-out;
+    
 
 }
-nav>div+div>ul>li>a:hover{
-    text-decoration: underline;
-    transition-delay: 1s;
-}
+
 
 nav>div>span>a{
     text-decoration: none;
     color: white;
 }
-nav>div>span>a:hover{
-    text-decoration: underline;
-    transition-delay: 1s;
-}
-.lien-compétences-projets:hover{
-    text-decoration: underline;
-    transition-delay: 1s;
-}
+
+
 header{
     
     display: flex;  
