--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -593,21 +593,24 @@ path.two {
     margin-right: 0px;
 }
 
-
+.card:hover{
+    box-shadow: 6px 10px 10px 2px rgba(0,0,0,0.35);
+}
 .card{
     padding-top: 10px;
     margin-bottom: 3%;
     padding-bottom: 2%;
     background-color: #fff;
     flex-wrap: wrap;
-    border-radius: 5px 5px ;
-    width: 20%;
+    border-radius: 10px 10px ;
+    width: 700px;
     height: auto;
     display: flex;
     flex-direction: column;
-    flex-grow: 1;
     
-    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+    
+    -webkit-box-shadow: 3px 7px 10px 2px rgba(0,0,0,0.35); 
+    box-shadow: 3px 7px     10px 2px rgba(0,0,0,0.35);
     
 }
 .card-texte{
