--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -358,7 +358,7 @@ path.two {
     bottom: 0;
     backdrop-filter: blur(15px);
     background-color: rgba(255, 255, 255, 0.692);
-    z-index: 10;
+    z-index: 100000000000000000;
     display: none;
 }
 
@@ -481,7 +481,10 @@ path.two {
 }
 .sous-titre-objectifs{
     margin-bottom: 3%;
+    margin-top: 3%;
     font-size: 2em;
+    text-align: center;
+    white-space: nowrap;
 }
 .apparition-droite{
     width: 50%;
@@ -1057,6 +1060,7 @@ i:hover{
         width: 45%;
        
     }
+
     .card-projets-seuls{
         width: 55%;
     }
@@ -1087,7 +1091,10 @@ i:hover{
         flex-direction: row;
         
     }
-    
+    .image-apparition{
+        flex-direction: column;
+        align-items:center ;
+    }
     
     .row{
         
@@ -1102,6 +1109,7 @@ i:hover{
     }
     .row:first-child{
         margin-right: 5%;
+        justify-content: flex-start;
     }
     .card{
         width: 100%;
