--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -226,6 +226,16 @@ nav>div+div>ul>li:last-child{
     width: 100%;
 }
 
+.surligne{
+    height: 3px;
+    background-color: #fff;
+    transition: 0.5s;
+    width: 0%;
+
+}
+li:hover .surligne{
+    width: 100%;
+}
 
 
 .menu-hamburger{
@@ -457,6 +467,7 @@ path.two {
     margin-top: 1%;
     cursor: pointer;
     white-space: nowrap;
+    padding: 5px;
 }
 
 .github{
@@ -642,7 +653,28 @@ div.preuve> h1.sous-titre-objectifs {
     margin-left: 60px;
     margin-right: 0px;
 }
+.by{
+    color: #fff;
+    text-decoration: none;
 
+}
+.by:hover{
+    
+    border-bottom: #fff 3px solid;
+}
+.fin{
+    color: #fff;
+    font-size: 25px;
+}
+.madeby{
+    margin-top: 5%;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    height: 100px;
+    color: #fff;
+}
 .card:hover{
     box-shadow: 6px 10px 10px 2px rgba(0,0,0,0.35);
 }
@@ -657,8 +689,6 @@ div.preuve> h1.sous-titre-objectifs {
     height: auto;
     display: flex;
     flex-direction: column;
-    
-    
     -webkit-box-shadow: 3px 7px 10px 2px rgba(0,0,0,0.35); 
     box-shadow: 3px 7px     10px 2px rgba(0,0,0,0.35);
     
@@ -1056,7 +1086,7 @@ textarea{
 }
 .formulaire-bouton{
     margin-top: 2%;
-    width: 20%;
+    width: 25%;
     justify-content: center;
     display: flex;
     margin-bottom: 2%;
@@ -1068,7 +1098,7 @@ textarea{
     border-radius: 10px;
     border-color: #fff;
     color: #fff;
-    width: 50%;
+    width: 100%;
     height: 50px;
 }
 .bouton_contact:hover{
@@ -1107,7 +1137,8 @@ i:hover{
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin-bottom: 2%;
+    align-items: center;
+    margin-bottom: 5%;
 }
 .logo-reseau:hover{
     -webkit-transform:rotate(360deg); 
@@ -1117,7 +1148,7 @@ i:hover{
   transform:rotate(360deg);
 }
 .lesreseaux{
-    width: 50%;
+    width: 60%;
     display: flex;
     flex-direction: column;
     flex-grow: 1;
@@ -1126,18 +1157,18 @@ i:hover{
 }
 
 .lesreseaux2{
-    width: 50%;
+    width: 40%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     flex-grow: 1;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
 }
 
 .partie-reseau{
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: center;
 }
 
 @media screen and (max-width:1550px){
@@ -1146,6 +1177,12 @@ i:hover{
         padding-right: 3em;
    
     }
+}
+
+.decalage-reseau{
+    display: flex;
+    flex-direction: column;
+    
 }
 
 @media  screen and (max-width:1130px) and (min-width:650px) {
@@ -1247,6 +1284,25 @@ i:hover{
         display: block;
         
         
+    }
+    .contient{
+        flex-direction: column;
+        
+    }
+    .lesreseaux,.lesreseaux2{
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+    }
+    .surligne{
+        background-color: #000000;
+    }
+    .unreseau{
+        margin-right: 3%;
+        margin-left: 3  %;
+    }
+    .unreseau:last-child{
+        margin-right: 0%;
     }
     .apparition-titre{
         font-size: 2.5em;
