--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -130,7 +130,9 @@ header{
     flex-direction: column;
     align-items: center;
     background-color:rgb(0 0 0 / 51%);
-    background-image: url(images/architecture-2256489_1920.jpg);
+    background-image: url(images/architecture-2256489_1920.jpg) ;
+    background-repeat: no-repeat;
+    background-size: cover;
     flex-wrap: wrap;
     height: auto;
     width: 100%;
@@ -539,7 +541,7 @@ div.preuve> h1.sous-titre-objectifs {
     
 }
 .image_special{
-    
+    border-radius: 10px;
     width: 100%;
     max-width: 500px;
     max-height: 250px;
