Modification de la vérification des inputs sur app.js

--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -1047,11 +1047,47 @@ input{
 
 
 }
+
+.apparait{
+    
+    
+    transform: translateY(0px)!important;
+    opacity: 1!important;
+    position: relative!important;
+}
+
+.nom{
+    margin-top: 1%;
+    color :red;
+    position: absolute;
+    opacity: 0; 
+    font-size: 20px;
+    transform: translateY(-1000px);
+}
+.email{
+    margin-top: 1%;
+    color :red;
+    position: absolute;
+    opacity: 0; 
+    font-size: 20px;
+    transform: translateY(-1000px);
+}
+.message{
+    margin-top: 1%;
+    color: red;
+    position: absolute;
+    opacity: 0; 
+    font-size: 20px;
+    transform: translateY(-1000px);
+}
+
+
 .modal-input{
     display: flex;
     margin-top: 2%;
     margin-bottom: 2%;
-    flex-direction: row;
+    align-items: center;
+    flex-direction: column;
     justify-content: center;
     
     width: 100%;
@@ -1067,8 +1103,9 @@ input{
 
 .message-modal-input{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
     width: 100%;
     margin-top: 2%;
 }
